large and small safe

--- a/view/homewindow.html
+++ b/view/homewindow.html
@@ -9,14 +9,62 @@
         </div>
         <body>
           <div id = "options">
-            <button type = "button" class = "btn" id ="newbill" >
+            <button type = "button" class = "btn btn-link" id ="newbill" >
               New bill
-            </button><br><br>
-            <button type = "button" class = "btn" id = "query">
+            </button><br>
+            <button type = "button" class = "btn btn-link" id = "query">
               query
-            </button><br><br>
-            <button class = "btn" id = "menu">menu</button>
+            </button><br>
+            <button class = "btn btn-link" id = "menu">menu</button>
+            <br>
+            <button class = "btn btn-link" id = "smallsafebutton">Small Safe </button><br>
+            <button class = "btn btn-link" id = "largesafebutton">Large Safe</button>
+
           </div>
+          <div id="smallsafedialog" class="modal fade">
+              <div class="modal-dialog">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                          <h4 class="modal-title">Small safe </h4>
+                      </div>
+                      <div class="modal-body" >
+                          <div id = "smallsafeamount"></div>
+                          <input type = "number" class = "form-control" id = "smallsafetransactionamount" placeholder = "transaction amount" style = "width:80% ;height:30px;margin-top:10px;"></input>
+                          <input type = "text" class = "form-control" id = "smallsafetransactiondescription" placeholder = "description" style = "width:80% ;height:30px;margin-top:10px;"></input>
+                      </div>
+                      <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          <button type = "button" class = "btn btn-default"  id = "smallsafesave">Save</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div id="largesafedialog" class="modal fade">
+              <div class="modal-dialog">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                          <h4 class="modal-title">Large Safe</h4>
+                      </div>
+                      <div class="modal-body" >
+                        <div id = "largesafeamount"></div>
+                        <input type = "number" class = "form-control" id = "largesafetransactionamount" placeholder = "transaction amount" style = "width:80% ;height:30px;margin-top:10px;"></input>
+                        <input type = "text" class = "form-control" id = "largesafetransactiondescription" placeholder = "description" style = "width:80% ;height:30px;margin-top:10px;"></input>
+                      </div>
+                      <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          <button type = "button" class = "btn btn-default"  id = "largesafesave">Save</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <script>
+            let $ = require('jquery');
+            let jQuery = require('jquery');
+          </script>
+          <script src = "./../node_modules/jquery-ui-/jquery-ui.min.js"></script>
+          <script src="./../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
           <script> require("./../renderer/homewindow.js") </script>
           <link rel="stylesheet" href="./../node_modules/bootstrap/dist/css/bootstrap.min.css">
         <body>
