--- a/view/querywindow.html
+++ b/view/querywindow.html
@@ -2,69 +2,50 @@
  <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>
       query window
     </title>
   </head>
   <body>
-    <div id = "outerdiv" class = "container-fluid">
-    <div id = "dailysell" class = "container-fluid">
+    <div id = "outerdiv" >
+    <div id = "dailysell" style="border:1px solid black;" class = "col-lg-3 col-md-3 col-xs-6">
       <form id = "dailysellform">
-        Date:
-        <input type = "number" name = "querydate" placeholder="DDMMYYYY"><br>
+        <input type = "number" class = "form-control" placeholder="DD MM YYYY"><br>
         <input type = "submit" value = "query"><br>
       </form>
     </div>
-    <div id = "queryusingbill" class = "container-fluid">
+    <div id = "queryusingbill"  style="border:1px solid black;" class = "col-lg-3 col-md-3 col-xs-6">
       <form id = "queryusingbillform">
-        billid:
-        <input type = "text" name = "billid"><br>
-        <input type = "submit" value = "query"><br>
+        <input type = "text" class = "form-control" placeholder="billid:"><br>
+        <input type = "submit"value = "query"><br>
       </form>
     </div>
-    <div id = "queryusingcustomername" class = "container-fluid">
-      <form id = "queryusingcustomernameform">
-        customername:
-        <input type = "text" name = "customename"><br>
-        <input type = "submit" value = "query"><br>
+    <div id = "queryusingcustomername" class = "col-lg-3 col-md-3 col-xs-6">
+      <form id = "queryusingcustomernameform"  style="border:1px solid black;">
+        <input type = "text" class = "form-control" placeholder="Customer name"><br>
+        <input type = "submit" value ="query"><br>
       </form>
     </div>
-    <div id = "queryusingcontact" class = "container-fluid">
-      <form id = "queryusingcontactform">
-        contactno:
-        <input type = "text" name = "contactno"><br>
-        <input type = "submit" value = "query"><br>
+    <div id = "queryusingcontact" class = "col-lg-3 col-md-3 col-xs-6">
+      <form id = "queryusingcontactform"  style="border:1px solid black;">
+        <input type = "text" class = "form-control" placeholder="contactno:"><br>
+        <input type = "submit"value = "query"><br>
       </form>
     </div>
-  </div>
-  <div class="container-fluid col-xs-12 col-md-12 col-lg-12">
-    	<div class="row">
-			<div class="col-md-6">
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<h3 class="panel-title">Results</h3>
-					</div>
-					<div class="panel-body">
-						<input type="text" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Developers" />
-					</div>
+    <div>
+      <form id ="transactionquery" style="border:1px solid black;"class = "col-lg-12 col-md-12 col-xs-12">
+        <input type ="text" class = "form-control" placeholder="user" id = "transactionuser">
+        <input type ="text" class = "form-control" placeholder="safetype" id = "transactionsafetype">
+        <input type ="text" class = "form-control" placeholder="date" id ="transactiondate">
+        <input type ="text" class = "form-control" placeholder="purpose" id = "transactionpurpose">
+        <input type ="text" class = "form-control" placeholder="reciever" id = "transactionto">
+        <br>
+        <input type = "submit" value = "query">
+      </form>
+    </div>
 					<table class="table table-hover" id="results" style = "width:100%">
-						<thead>
-							<tr>
-								<th>item name</th>
-								<th>quantity sold</th>
-								<th>Amount</th>
-							</tr>
-						</thead>
-						<tbody id = "resultinsert">
-						</tbody>
 					</table>
-				</div>
-			</div>
-
-			</div>
-		</div>
-	</div>
+</div>
   <script> require('./../renderer/querywindow.js') </script>
   <link rel="stylesheet" href="./../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./../stylesheets/querywindow.css">
