name change  to scripts

--- a/view/billwindow.html
+++ b/view/billwindow.html
@@ -47,7 +47,7 @@
         </div>
         </form>
         <script>
-           require('./../renderer/billwindow.js')
+           require('./../scripts/billwindow.js')
         </script>
         <script>window.$ = window.jQuery = require('jquery');</script>
         <link rel="stylesheet" href="./../node_modules/bootstrap/dist/css/bootstrap.min.css">
