--- a/view/homewindow.html
+++ b/view/homewindow.html
@@ -119,7 +119,7 @@
           <link rel="stylesheet" href="./../stylesheets/homewindow.css">
           <link rel="stylesheet" href="./../node_modules/jqwidgets-framework/jqwidgets/styles/jqx.shinyblack.css">
 
-          <script> require("./../renderer/homewindow.js") </script>
+          <script> require("./../scripts/homewindow.js") </script>
           <script src="./../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
           <script src="./../node_modules/jqwidgets-framework/jqwidgets/jqxcore.js"></script>
           <script src="./../node_modules/jqwidgets-framework/jqwidgets/jqxbuttons.js"></script>
