--- a/view/menuwindow.html
+++ b/view/menuwindow.html
@@ -79,7 +79,7 @@
       <script src="./../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
       <script>
-         require('./../renderer/menuwindow.js')
+         require('./../scripts/menuwindow.js')
       </script>
 
     </body>
