--- a/view/querywindow.html
+++ b/view/querywindow.html
@@ -46,7 +46,7 @@
 					<table class="table table-hover" id="results" style = "width:100%">
 					</table>
 </div>
-  <script> require('./../renderer/querywindow.js') </script>
+  <script> require('./../scripts/querywindow.js') </script>
   <link rel="stylesheet" href="./../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./../stylesheets/querywindow.css">
   </body>
