--- a/view/querywindow.html
+++ b/view/querywindow.html
@@ -10,7 +10,7 @@
     <div id = "outerdiv" >
     <div id = "dailysell" style="border:1px solid black;" class = "col-lg-3 col-md-3 col-xs-6">
       <form id = "dailysellform">
-        <input type = "number" class = "form-control" placeholder="DD MM YYYY"><br>
+        <input type = "text" class = "form-control" placeholder="DD MM YYYY"><br>
         <input type = "submit" value = "query"><br>
       </form>
     </div>
