--- a/view/homewindow.html
+++ b/view/homewindow.html
@@ -6,7 +6,7 @@
           </title>
         </head>
         <div style = "height :700px ; background-color:#112;  border-color: #59B2E6; resize: vertical; overflow:auto;width:100%">
-        <img id = "img1" src = "/home/vashist/Desktop/bryc/BRYC/resources/1.jpeg" style = "height:100%; width:100%">
+        <img id = "img1" src = "./../resources/1.jpeg" style = "height:100%; width:100%">
         </div>
         <body style = "background-color: #112">
           <div class = "col-lg-3  col-md-3 col-xs-6" id = "options" style="width:200px">
